# Practice-collection

./: LICENSE  README.md
Authenticating_a_User_with_LDAP/: pom.xml
BLEApplication/: settings.gradle.kts
BLEApplication/app/: build.gradle.kts
Building_Java_Projects_with_Maven/: pom.xml
Building_Java_Projects_with_Maven/src/: pom.xml
Building_a_RESTful_Web_Service/: pom.xml
Caching_Data_with_GemFire/: pom.xml
Creating_a_Batch_Service/: pom.xml
Integrating_Data/: pom.xml
LeetCode/: README.md
Messaging_with_Redis/: pom.xml
ReactNativeTest/: App.tsx  package-lock.json  package.json  tsconfig.json
Using_WebSocket_to_build_an_interactive_web_application/: pom.xml
Validating_Form_Input/: pom.xml
algorithm-yan/: .gitignore  CMakeLists.txt  hello.c
angular-start/binding/: angular.json  package-lock.json  package.json
appium-test/: .gitignore  pom.xml
cmake/: CMakeLists.txt  Queue.h  TutorialConfig2.h.in  calc.cpp  calc.h  dhx_lib.h  filter.h  main.cpp  main2.cpp
cmake-lib/: CMakeLists.txt  dhx_lib.cpp
cmake/MathFunctions/: CMakeLists.txt  MakeTable.cpp  MathFunctions.cpp  MathFunctions.h  mysqrt.cpp
cmake/content2/: a.h  calc.cpp  speaker.cpp  speaker.h  text-provider.cpp  text-provider.h
cmake/lib/: dhx_lib.lib  test_library.lib
designPattern/: .gitignore  pom.xml
dockerfile/: teamcity-agent-Java11-Android-Dockerfile
golang/: .gitignore  6.824
golang/ch1/: crawl.go  (+2 more)
html5/: AccessKey.html  Listing01.html
kotlin-start/: .gitignore
learnC/: .gitignore  CMakeLists.txt  dbg.h  ex1.c  ex10.c  ex13.c  ex14.c  ex15.c  ex16.c  ex17.c  ex18.c  ex21.c  ex3.c  ex5.c  ex8.c  ex9.c
mybatis/: pom.xml
netty-in-action/: pom.xml
rxJava/: pom.xml
springPractice/: .gitignore
vimPractice/: hello.txt
xgBoost/: pom.xml
(+407 files in other folders)
